Formatting data to YOLO format

--- a/server/index.html
+++ b/server/index.html
@@ -6,6 +6,7 @@
     <title>DA231X client</title>
   </head>
   <body>
+    <video id="video" autoplay playsinline></video>
     <script src="index.js"></script>
   </body>
 </html>
